--- a/seeder/package.json
+++ b/seeder/package.json
@@ -1,6 +1,8 @@
 {
   "type": "module",
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.1",
+    "dotenv": "^16.3.1",
     "puppeteer": "^21.3.8"
   }
 }
